// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./ImageFallback.stories LargeSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <img
    alt="Large image"
    height="96"
    src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
    width="96"
  />
</div>
`;

exports[`./ImageFallback.stories SmallSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <img
    alt="Small image"
    height="24"
    src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
    width="24"
  />
</div>
`;

exports[`./ImageFallback.stories WithFallbackComponent 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <img
    alt="Unknown"
    height="48"
    src="https://invalid-url.com/broken-image.png"
    width="48"
  />
</div>
`;

exports[`./ImageFallback.stories WithFallbackSrc 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <img
    alt="Token placeholder"
    height="48"
    src="https://invalid-url.com/broken-image.png"
    width="48"
  />
</div>
`;

exports[`./ImageFallback.stories WithValidImage 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <img
    alt="Ethereum logo"
    height="48"
    src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
    width="48"
  />
</div>
`;
